Correction for the oneOf in the open api spec
